# Lloyd_Engine_V4

./: .gitignore  README.md  codex_targeted_report_jetbundle_solver.md  pyproject.toml
Build_Docs/: Lloyd_engine_V4_plan.txt  V4_and_DSP.txt  session_handoff.md  solver_idea.txt
scratch/: foldreadback_probe0_v10_active_dualarm_artifact.json  foldreadback_probe0_v8_outcomelaw.py  run_foldreadback_probe0_v10_active_dualarm.py  run_foldreadback_probe0_v7.py  run_foldreadback_probe0_v9.py
tests/: _projection_branch.py  conftest.py  test_f1_f2_natural_phase.py  test_foldreadback_probe0_v10_active_dualarm.py  test_foldreadback_probe0_v10_sr.py  test_task000_core_smoke.py  test_task000_docs_exist.py  test_task000_no_v3_dependency.py  test_task000_strict_serialization.py  test_task001_projective_ratio.py  test_task001_projective_ratio_scalarization.py  test_task001_projective_ratio_serialization.py  test_task001_source_purity.py  test_task002_quadratic_root_selection.py  test_task002_quadratic_root_serialization.py  test_task002_source_purity.py  test_task002_stratified_quadratic_roots.py  test_task003_source_purity.py  test_task004_bk_noise_floor.py  test_task004_kq_calibration.py  test_task004_metrology_protocols.py  test_task004_metrology_serialization.py  test_task004_no_reclassification.py  test_task004_source_purity.py  test_task005_existing_flows_still_pass.py  test_task005_protocol_status_families.py  test_task005_source_purity.py  test_task005_status_transition_rules.py  test_task005_transition_rule_coverage.py  test_task005_typed_result_generics.py  (+78 more)
(+353 files in other folders)
