[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lloyd-v4"
version = "0.0.0"
description = "Typed numerical geometry kernel for stratified finite-precision computation."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: campaign/report regression tests that are useful for release verification but expensive during rapid iteration",
]
